test-data/gke2/json-dumps/compute-routers-europe-west4.json
{
  "kind": "compute#routerList",
  "id": "projects/gcpdiag-gke-cluster-autoscaler-rrrr/regions/europe-west4/routers",
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke-cluster-autoscaler-rrrr/regions/europe-west4/routers"
}
